# setuptools-pipfile

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  404.html  LICENSE  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: ci.yml  publish.yml
basic-setup/: index.html
config-advanced/: index.html
docs/: basic-setup.md  config-advanced.md  future-state.md  index.md
future-state/: index.html
search/: search_index.json
setuptools_pipfile/: keyword.py  pipfile.py
src/setuptools_pipfile/: keyword.py  pipfile.py
tests/: conftest.py  test_keyword.py  test_pep517.py  test_pipfile.py
