[bdist_wheel]
universal = 1

[metadata]
name = setuptools-pipfile
author = asyncon
author_email = 53700266+asyncon@users.noreply.github.com
description = Dependency management via Pipfile
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/asyncon/setuptools-pipfile
project_urls =
    Bug Tracker = https://github.com/asyncon/setuptools-pipfile/issues
    Documentation = https://asyncon.github.io/setuptools-pipfile/
    Source Code = https://github.com/asyncon/setuptools-pipfile
requires_python = >=3.4
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = True
packages =
    setuptools_pipfile
install_requires =
    toml

[options.entry_points]
distutils.setup_keywords =
    use_pipfile = setuptools_pipfile.keyword:use_pipfile

setuptools.finalize_distribution_options =
    setuptools_pipfile = setuptools_pipfile.keyword:finalize_dist
